<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 47 Degrees, LLC http://47deg.com hello@47deg.com
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License"); you may
  ~ not use this file except in compliance with the License. You may obtain
  ~ a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">Translate Bubble</string>
    <string name="action_settings">Settings</string>

    <string name="translatedTitle">%1$s translated</string>

    <string name="failedTitle">Failed</string>
    <string name="failedMessage">There was a problem. Please, try again</string>
    <string name="generalMessageError">There was an error while trying to retrieve the translation history information.
        Please tap on the \"Reload\" button to try again</string>
    <string name="generalMessageEmpty">We haven\'t found enough data for this section yet.</string>
    <string name="clipboardMessageError">There was an error while trying to retrieve the text from the clipboard.</string>
    <string name="translationMessageError">There was an error while trying to translated the text.</string>
    <string name="reload">Reload</string>

    <string name="translating">Translating</string>
    <string name="toLanguages">%1$s to %2$s</string>

    <string name="translationEnable">Translation Enabled</string>

    <string name="typeFeedback">Feedback Type</string>

    <string name="notificationTitle">Notification</string>
    <string name="notificationMessage">Trigger an Android system notification</string>

    <string name="bubbleTitle">Bubble</string>
    <string name="bubbleMessage">A unobtrusive bubble overlaid on the screen</string>

    <string name="headUpNotificationTitle">Heads-Up Notification</string>
    <string name="headUpNotificationMessage">Show Heads-Up. Only in Lollipop and greater</string>

    <string name="about">About</string>
    <string name="showTutorial">Show Tutorial</string>
    <string name="history">History</string>
    <string name="showHistory">Show History</string>
    <string name="openSource">Open Source</string>
    <string name="openSourceMessage">This app is licensed under the Apache License, Version 2.0 and
        developed using Scala on Android. You can download the source code to learn more about writing applications in Scala on Android.</string>
    <string name="aboutMessage">Translate Bubble is written in Scala for Android. Handcrafted by the 47 Degrees team and implemented using the free
        MyMemory translation API.</string>

    <string name="goToGitHub">View on GitHub</string>
    <string name="goTo47Deg">Go to 47 Degrees</string>
    <string name="goToMyMemory">Go to MyMemory</string>
    <string name="goToWeb">Go to Web</string>
    <string name="cancel">Cancel</string>

    <string name="languages">Languages</string>
    <string name="from">From %1$s</string>
    <string name="to">To %1$s</string>

    <string name="wizardTitle1">Translate Bubble</string>
    <string name="wizardDescription1">Translations without interruptions</string>
    <string name="wizardTitle2">Copy to clipboard</string>
    <string name="wizardDescription2">Select the text you want to translate and copy it to the clipboard</string>
    <string name="wizardTitle3">Bubble appears</string>
    <string name="wizardDescription3">A bubble containing the translation appear and will not interrupt your current task</string>
    <string name="wizardTitle4">Click the bubble</string>
    <string name="wizardDescription4">You\'ll see the translation. You can move the results around on your screen</string>
    <string name="wizardTitle5">Use with Android Wear</string>
    <string name="wizardDescription5">Have a Android Wear watch? Select notifications and your translations appear directly on your wrist!</string>

    <string name="gotIt">Got it!</string>

    <string name="BUBBLE">Bubble</string>
    <string name="NOTIFICATION">Notification</string>

    <string name="AUTO_DETECT">Autodetect</string>
    <string name="ARABIC">Arabic</string>
    <string name="BULGARIAN">Bulgarian</string>
    <string name="CATALAN">Catalan</string>
    <string name="CHINESE_SIMPLIFIED">Chinese Simplified</string>
    <string name="CHINESE_TRADITIONAL">Chinese Traditional</string>
    <string name="CZECH">Czech</string>
    <string name="DANISH">Danish</string>
    <string name="DUTCH">Dutch</string>
    <string name="ENGLISH">English</string>
    <string name="ESTONIAN">Estonian</string>
    <string name="FINNISH">Finnish</string>
    <string name="FRENCH">French</string>
    <string name="GERMAN">German</string>
    <string name="GREEK">Greek</string>
    <string name="HAITIAN_CREOLE">Haitian Creole</string>
    <string name="HEBREW">Hebrew</string>
    <string name="HINDI">Hindi</string>
    <string name="HMONG_DAW">Hmong Daw</string>
    <string name="HUNGARIAN">Hungarian</string>
    <string name="INDONESIAN">Indonesian</string>
    <string name="ITALIAN">Italian</string>
    <string name="JAPANESE">Japanese</string>
    <string name="KOREAN">Korean</string>
    <string name="LATVIAN">Latvian</string>
    <string name="LITHUANIAN">Lithuanian</string>
    <string name="MALAY">Malay</string>
    <string name="NORWEGIAN">Norwegian</string>
    <string name="PERSIAN">Persian</string>
    <string name="POLISH">Polish</string>
    <string name="PORTUGUESE">Portuguese</string>
    <string name="ROMANIAN">Romanian</string>
    <string name="RUSSIAN">Russian</string>
    <string name="SLOVAK">Slovak</string>
    <string name="SLOVENIAN">Slovenian</string>
    <string name="SPANISH">Spanish</string>
    <string name="SWEDISH">Swedish</string>
    <string name="THAI">Thai</string>
    <string name="TURKISH">Turkish</string>
    <string name="UKRAINIAN">Ukrainian</string>
    <string name="URDU">Urdu</string>
    <string name="VIETNAMESE">Vietnamese</string>

    <string name="shareActivityLabel">Activate Translate Bubble</string>
</resources>