<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
            android:key="translationEnable"
            android:title="@string/translationEnable"
            android:defaultValue="true" />

    <PreferenceCategory android:title="@string/typeFeedback">

        <ListPreference
                android:defaultValue="bubble"
                android:key="typeTranslate"/>

        <CheckBoxPreference
                android:key="headUpNotification"
                android:title="@string/headUpNotificationTitle"
                android:summary="@string/headUpNotificationMessage"
                android:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/languages">

        <ListPreference
                android:defaultValue="ENGLISH"
                android:key="fromLanguage"/>

        <ListPreference
                android:defaultValue="SPANISH"
                android:key="toLanguage"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about">

        <PreferenceScreen
                android:key="showTutorial"
                android:title="@string/showTutorial"
                />

        <PreferenceScreen
                android:key="openSource"
                android:title="@string/openSource"
                />

        <PreferenceScreen
                android:key="launchFake"
                android:title="@string/launchFake"
                />

    </PreferenceCategory>

</PreferenceScreen>